[ruyue] fixed:concent can not align at right

--- a/src/styles/education.scss
+++ b/src/styles/education.scss
@@ -17,6 +17,7 @@
 }
 
 .content {
+  width: 840px;
   background-color: $gray;
   vertical-align: middle;
   padding: 0 10px;
